--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   # DataSource Config
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/wj_api
+    url: jdbc:mysql://117.50.194.150:3306/wj_api
     username: root
     password:
   mvc:
@@ -17,7 +17,7 @@ spring:
   # redis 配置
   redis:
     port: 6379
-    host: 127.0.0.1
+    host: 117.50.194.150
     password: 20020829
     database: 0
 server:
