--- a/WJ-Interface/src/main/resources/application.yml
+++ b/WJ-Interface/src/main/resources/application.yml
@@ -2,7 +2,8 @@ server:
   port: 8080
   servlet:
     context-path: /api
-yuapi:
-  client:
-    access-key: wjapi
-    secret-key: abcdefgh
+wj:
+  api:
+    client:
+      access-key: wjapi
+      secret-key: abc
