--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.hl</groupId>
+            <artifactId>WJ-Api-Client-SDK</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
