feat: 完成抽象层提取 服务测试成功

--- a/WJ-Api-GateWay/pom.xml
+++ b/WJ-Api-GateWay/pom.xml
@@ -18,9 +18,16 @@
 		<spring-cloud.version>2020.0.6</spring-cloud.version>
 	</properties>
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.hl</groupId>
+			<artifactId>WJ-Api-Common</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 
 		<dependency>
@@ -31,15 +38,28 @@
 
 		<dependency>
 			<groupId>org.apache.dubbo</groupId>
+			<artifactId>dubbo-spring-boot-starter</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.dubbo</groupId>
 			<artifactId>dubbo</artifactId>
-			<version>3.1.5</version>
+			<version>2.7.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.dubbo</groupId>
+			<artifactId>dubbo-registry-nacos</artifactId>
+			<version>2.7.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.alibaba.nacos</groupId>
 			<artifactId>nacos-client</artifactId>
-			<version>2.2.3</version>
+			<version>1.1.1</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
