--- a/WJ-Api-GateWay/src/main/resources/application.yml
+++ b/WJ-Api-GateWay/src/main/resources/application.yml
@@ -15,6 +15,16 @@ logging:
     org.springframework.cloud.gateway: TRACE  #???????
 
 
+nacos:
+  service-address: localhost
+  port: 8848
+dubbo:
+  service:
+    version: 1.0.0
+  application:
+    name: wj-api-gateway-consumer
+  registry:
+    address: nacos://${nacos.service-address}:${nacos.port}
 
 
 
