--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: springboot-init
+    name: WJ-ApiBackend
   # DataSource Config
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -34,14 +34,23 @@ mybatis-plus:
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 
+nacos:
+  service-address: localhost
+  port: 8848
 dubbo:
+  service:
+    version: 1.0.0
   application:
-    name: dubbo-wj-api-backend-provider
+    name: wj-api-backend-provider
+    qos-enable: true
+    #qos-port: -1
+  registry:
+    address: nacos://${nacos.service-address}:${nacos.port}
   protocol:
     name: dubbo
-    port: -1
-  registry:
-    id: nacos-registry
-    address: nacos://localhost:8848
+    port: -1 # -1 表示端口自增 from 20880
+  scan:
+    base-packages: com.hl.project.*.impl
+
 
 
