--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   # DataSource Config
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://117.50.194.150:3306/wj_api
+    url: jdbc:mysql://localhost:3306/wj_api
     username: root
-    password:
+    password: 20020829
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
