feat: 集成canal监听数据库对路由进行动态刷新

--- a/WJ-Api-GateWay/src/main/resources/application.yml
+++ b/WJ-Api-GateWay/src/main/resources/application.yml
@@ -75,6 +75,11 @@ dubbo:
     name: wj-api-gateway-consumer
   registry:
     address: nacos://${nacos.service-address}:${nacos.port}
+  protocol:
+    name: dubbo
+    port: -1 # -1 表示端口自增 from 20880
+  scan:
+    base-packages: com.hl.project.*.impl
 
 
 
