feat: 本地诗词接口接入成功

--- a/WJ-Interface/src/main/resources/application.yml
+++ b/WJ-Interface/src/main/resources/application.yml
@@ -1,5 +1,18 @@
 server:
   port: 8080
+  servlet:
+    context-path: /api
+
+spring:
+  application:
+    name: WJ-Interface
+  # DataSource Config
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/wj_api
+    username: root
+    password: 20020829
+
 
 wj:
   api:
@@ -7,25 +20,14 @@ wj:
       access-key: wjapi
       secret-key: abc
 
-# 暴露端点
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-  endpoint:
-    health:
-      show-details: always
 
 
-
-nacos:
-  service-address: localhost
-  port: 8848
-dubbo:
-  service:
-    version: 1.0.0
-  application:
-    name: wj-api-interface-provider
-  registry:
-    address: nacos://${nacos.service-address}:${nacos.port}
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: false
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      logic-delete-field: isDelete # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
